[package]
name = "cita-sm2"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
serde = "1.0"
cita-types = { git = "https://github.com/cita-cloud/cita-types",branch = "main" }
hashable = { git = "https://github.com/cita-cloud/hashable",branch = "main" }
cita-crypto-trait = { git = "https://github.com/cita-cloud/cita-crypto-trait",branch = "main" }
rlp = "0.5"
libsm = { git = "https://github.com/citahub/libsm", branch = "master" }
arrayref = "0.3"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
