[package]
name = "cita-sm2"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "A library library provide sm2 cryptography method"
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
serde = "1.0"
cita-types = "0.1"
hashable = { package = "cita-hashable", version = "0.1" }
cita-crypto-trait = "0.1"
rlp = "0.5"
libsm = "0.4"
arrayref = "0.3"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
